Add endpoints and tasks for project access request workflow