@@ -15,8 +15,11 @@
  */
 package com.redhat.parodos.project.service;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -26,14 +29,19 @@ import com.redhat.parodos.common.exceptions.IDType;
 import com.redhat.parodos.common.exceptions.ResourceAlreadyExistsException;
 import com.redhat.parodos.common.exceptions.ResourceNotFoundException;
 import com.redhat.parodos.common.exceptions.ResourceType;
-import com.redhat.parodos.project.dto.ProjectRequestDTO;
-import com.redhat.parodos.project.dto.ProjectResponseDTO;
-import com.redhat.parodos.project.dto.ProjectUserRoleResponseDTO;
-import com.redhat.parodos.project.dto.UserRoleRequestDTO;
-import com.redhat.parodos.project.dto.UserRoleResponseDTO;
+import com.redhat.parodos.project.dto.request.AccessRequestDTO;
+import com.redhat.parodos.project.dto.request.ProjectRequestDTO;
+import com.redhat.parodos.project.dto.request.UserRoleRequestDTO;
+import com.redhat.parodos.project.dto.response.AccessResponseDTO;
+import com.redhat.parodos.project.dto.response.ProjectResponseDTO;
+import com.redhat.parodos.project.dto.response.ProjectUserRoleResponseDTO;
+import com.redhat.parodos.project.dto.response.UserRoleResponseDTO;
 import com.redhat.parodos.project.entity.Project;
+import com.redhat.parodos.project.entity.ProjectAccessRequest;
 import com.redhat.parodos.project.entity.ProjectUserRole;
 import com.redhat.parodos.project.entity.Role;
+import com.redhat.parodos.project.enums.ProjectAccessStatus;
+import com.redhat.parodos.project.repository.ProjectAccessRequestRepository;
 import com.redhat.parodos.project.repository.ProjectRepository;
 import com.redhat.parodos.project.repository.ProjectUserRoleRepository;
 import com.redhat.parodos.project.repository.RoleRepository;
@@ -45,6 +53,7 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import static java.util.Objects.isNull;
 import static java.util.stream.Collectors.groupingBy;
 
 /**
@@ -62,21 +71,26 @@ public class ProjectServiceImpl implements ProjectService {
 
 	private final ProjectUserRoleRepository projectUserRoleRepository;
 
+	private final ProjectAccessRequestRepository projectAccessRequestRepository;
+
 	private final UserService userService;
 
 	private final ModelMapper modelMapper;
 
 	public ProjectServiceImpl(ProjectRepository projectRepository, RoleRepository roleRepository,
-			ProjectUserRoleRepository projectUserRoleRepository, UserService userService, ModelMapper modelMapper) {
+			ProjectUserRoleRepository projectUserRoleRepository,
+			ProjectAccessRequestRepository projectAccessRequestRepository, UserService userService,
+			ModelMapper modelMapper) {
 		this.projectRepository = projectRepository;
 		this.roleRepository = roleRepository;
 		this.projectUserRoleRepository = projectUserRoleRepository;
+		this.projectAccessRequestRepository = projectAccessRequestRepository;
 		this.userService = userService;
 		this.modelMapper = modelMapper;
 	}
 
 	@Override
-	public ProjectResponseDTO save(ProjectRequestDTO projectRequestDTO) {
+	public ProjectResponseDTO createProject(ProjectRequestDTO projectRequestDTO) {
 		if (projectRepository.findByNameIgnoreCase(projectRequestDTO.getName()).isPresent()) {
 			throw new ResourceAlreadyExistsException(ResourceType.PROJECT, IDType.NAME, projectRequestDTO.getName());
 		}
@@ -108,8 +122,15 @@ public class ProjectServiceImpl implements ProjectService {
 	@Override
 	public List<ProjectResponseDTO> getProjects() {
 		User user = userService.getUserEntityByUsername(SecurityUtils.getUsername());
-		return projectUserRoleRepository.findByUserId(user.getId()).stream()
-				.map(projectUserRole -> buildProjectReponseDTO(user, projectUserRole)).toList();
+		Map<UUID, ProjectUserRole> hm = new HashMap<>();
+		projectUserRoleRepository.findByUserId(user.getId())
+				.forEach(projectUserRole -> hm.put(projectUserRole.getProject().getId(), projectUserRole));
+		return projectRepository.findAll().stream().map(project -> {
+			if (hm.containsKey(project.getId())) {
+				return buildProjectReponseDTO(user, hm.get(project.getId()));
+			}
+			return buildProjectReponseDTO(project);
+		}).collect(Collectors.toList());
 	}
 
 	@Override
@@ -164,6 +185,34 @@ public class ProjectServiceImpl implements ProjectService {
 		return getProjectUserRoleResponseDTOFromProject(project);
 	}
 
+	@Override
+	public AccessResponseDTO createAccessRequestToProject(UUID id, AccessRequestDTO accessRequestDTO) {
+		Project project = projectRepository.findById(id)
+				.orElseThrow(() -> new ResourceNotFoundException(ResourceType.PROJECT, id));
+		User user = userService.getUserEntityByUsername(accessRequestDTO.getUsername());
+		Role role = roleRepository.findByNameIgnoreCase(accessRequestDTO.getRole().name()).orElseThrow(
+				() -> new ResourceNotFoundException(ResourceType.ROLE, IDType.NAME, accessRequestDTO.getRole().name()));
+		Optional<ProjectUserRole> projectUserRoleOptional = projectUserRoleRepository
+				.findByProjectIdAndUserIdAndRoleId(project.getId(), user.getId(), role.getId());
+		if (projectUserRoleOptional.isPresent()) {
+			throw new RuntimeException(String.format("User %s already assigned into project %s with role %s",
+					user.getUsername(), project.getName(), projectUserRoleOptional.get().getRole().getName()));
+		}
+		ProjectAccessRequest projectAccessRequest = projectAccessRequestRepository.save(ProjectAccessRequest.builder()
+				.project(project).user(user).role(role).status(ProjectAccessStatus.PENDING).build());
+		User projectOwner = userService.getUserEntityById(project.getCreatedBy());
+		List<User> projectAdmins = getProjectUsersByRoleName(project.getId(),
+				com.redhat.parodos.project.enums.Role.ADMIN);
+		return AccessResponseDTO.builder().accessRequestId(projectAccessRequest.getId())
+				.project(AccessResponseDTO.ProjectDTO.builder().id(project.getId()).name(project.getName())
+						.createdBy(String.format("%s, %s", projectOwner.getFirstName(), user.getLastName()))
+						.createdDate(project.getCreatedDate()).build())
+				.approvalSentTo((isNull(projectAdmins) || projectAdmins.isEmpty())
+						? Collections.singletonList(projectOwner.getEmail())
+						: projectAdmins.stream().map(User::getEmail).collect(Collectors.toList()))
+				.escalationSentTo(projectOwner.getEmail()).build();
+	}
+
 	private ProjectUserRoleResponseDTO getProjectUserRoleResponseDTOFromProject(Project project) {
 		return ProjectUserRoleResponseDTO.builder().id(project.getId()).projectName(project.getName())
 				.userResponseDTOList(project.getProjectUserRoles().stream()
@@ -192,6 +241,23 @@ public class ProjectServiceImpl implements ProjectService {
 				.accessRole(projectUserRole.getUser().getId().equals(user.getId()) ? projectUserRole.getRole().getName()
 						: null)
 				.build();
+	}
+
+	private ProjectResponseDTO buildProjectReponseDTO(Project project) {
+		User createdByUser = userService.getUserEntityById(project.getCreatedBy());
+		User modifiedByUser = userService.getUserEntityById(project.getModifiedBy());
+		return ProjectResponseDTO.builder().id(project.getId()).name(project.getName())
+				.description(project.getDescription()).createdDate(project.getCreatedDate())
+				.createdBy(createdByUser.getUsername()).modifiedDate(project.getModifiedDate())
+				.modifiedBy(modifiedByUser.getUsername()).build();
+	}
+
+	private List<User> getProjectUsersByRoleName(UUID projectId, com.redhat.parodos.project.enums.Role roleName) {
+		Role role = roleRepository.findByNameIgnoreCase(roleName.name())
+				.orElseThrow(() -> new ResourceNotFoundException(ResourceType.ROLE, IDType.NAME, roleName.name()));
+		List<ProjectUserRole> projectUserRoleList = projectUserRoleRepository.findByProjectIdAndRoleId(projectId,
+				role.getId());
+		return projectUserRoleList.stream().map(ProjectUserRole::getUser).collect(Collectors.toList());
 	}
 
 }
